--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,13 @@
 [tox]
-envlist = py26,py27,py33,py34,py35
+envlist = py27,py33,py34,py35
+[testenv:py27]
+basepython = python2.7
+[testenv:py33]
+basepython = python3.3
+[testenv:py34]
+basepython = python3.4
+[testenv:py35]
+basepython = python3.5
 [testenv]
-deps=rdflib
+deps=pytest
 commands=py.test
