--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,9 @@ python:
   - "3.5"
 
 install:
+  - pip install -U setuptools   # Fix for https://travis-ci.org/scriptotek/otsrdflib/jobs/152446727
   - python setup.py install
-  - pip install collective.checkdocs
+  - pip install Pygments collective.checkdocs
 
 script:
   - py.test
